--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 frr (6.0-0+pve) RELEASED; urgency=medium
 
+  [ Alexandre Derumier ]
   * Proxmox initial release.
+
+  [ Rhonda D'Vine ]
+  * debian/control: Format Build-Depends to make diffs easier to read.
 
  -- Alexandre Derumier <aderumier@odiso.com>  Mon, 15 Oct 2018 04:46:06 +0200
 
