--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+frr (6.0.1-0+pve) RELEASED; urgency=medium
+
+  * Bump to 6.0.1
+
+ -- Alexandre Derumier <aderumier@odiso.com>  Mon, 31 Dec 2018 09:00:00 +0200
+
 frr (6.0-0+pve) RELEASED; urgency=medium
 
   [ Alexandre Derumier ]
