--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+frr (7.2-0+pve) RELEASED; urgency=medium
+
+  * Bump to 7.2
+
+ -- Alexandre Derumier <aderumier@odiso.com>  Fri, 15 Nov 2010 02:01:00 +0200
+
 frr (6.0.1-0+pve) RELEASED; urgency=medium
 
   * Bump to 6.0.1
