use 7.2 tag for submodule
The currently packaged version still used frr 6.0 :/

Signed-off-by: Alexandre Derumier <aderumier@odiso.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+frr (7.2-1+pve) pve; urgency=medium
+
+  * checkout frr sub-module to frr 7.2 release
+
+ -- Proxmox Support Team <support@proxmox.com>  Mon, 25 Nov 2019 17:55:15 +0100
+
 frr (7.2-0+pve) pve; urgency=medium
 
   * update to upstream 7.2 release
