--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+frr (8.0.1-1+pve) bullseye; urgency=medium
+
+  * Bump to 8.0.1
+
+ -- Proxmox Support Team <support@proxmox.com>  Tue, 30 Oct 2021 9:32:01 +0200
+
 frr (7.5.1-99+pve~really7.4) bullseye; urgency=medium
 
   * Revert to 7.4 for now due to regressions in combination with evpn from the
