--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+frr (8.2.2-1+pve1) bullseye; urgency=medium
+
+  * update upstream sources to 8.2.2
+
+ -- Proxmox Support Team <support@proxmox.com>  Sun, 24 Apr 2022 08:10:30 +0100
+
 frr (8.0.1-1+pve1) bullseye; urgency=medium
 
   * update upstream sources to 8.0.1
