--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+frr (8.5.1-1+pve1) bookworm; urgency=medium
+
+  * update upstream sources to 8.5.1
+
+  * backport evpn mac mobility fixes from stable/8.0
+
+ -- Proxmox Support Team <support@proxmox.com>  Tue, 06 Jun 2023 08:41:42 +0200
+
 frr (8.2.2-1+pve1) bullseye; urgency=medium
 
   * update upstream sources to 8.2.2
